kuber/python-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-backend
  template:
    metadata:
      labels:
        app: python-backend
    spec:
      containers:
        - name: python-backend
          image: 1992andy/python:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000 
         
         

---
apiVersion: v1
kind: Service
metadata:
  name: python-backend-service
spec:
  selector:
    app: python-backend
  ports:
    - port: 5000      
      targetPort: 5000 
  type: ClusterIP
