kuber/ingress.yml

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: frontend-ingress
#   annotations:
#     # nginx.ingress.kubernetes.io/ingress.class: "nginx"
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: www.doomscrolling.live
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: angular-service
#                 port:
#                   number: 80
   
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   try_files $uri $uri/ /index.html;
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: www.doomscrolling.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
